...
                    modifier = Modifier,
                    style = MaterialTheme.typography.headlineMedium,
                    fontWeight = FontWeight.Bold,
                    textAlign = TextAlign.Center,
                )
                Text(
                    text = "QuickPizza has your back!",
                    modifier = Modifier,
                    style = MaterialTheme.typography.titleLarge,
                    color = OrangeAccent,
                    fontWeight = FontWeight.Bold,
                    textAlign = TextAlign.Center,
                )
...
